crates/swc_ecma_parser/tests/errors/issue-8268/1/input.js
export { default }
export { if }
export { default as foo }
export { if as bar }
